@@ -74,6 +74,8 @@ class Residue : Avogadro::Primitive, OpenBabel::OBResidue
 
 };
 
+
+
 class Molecule : Avogadro::Primitive, OpenBabel::OBMol
 {
 %TypeHeaderCode
@@ -83,6 +85,7 @@ class Molecule : Avogadro::Primitive, OpenBabel::OBMol
     public:
       Molecule(QObject *parent=0);
       Molecule(const Avogadro::Molecule &other);
+      Molecule(const OpenBabel::OBMol &other);
       virtual ~Molecule();
       void update();
       Avogadro::Atom *CreateAtom();
