@@ -1,0 +1,17 @@
+
+ OpenBabel09150814253D
+
+  6  5  0  0  0  0  0  0  0  0999 V2000
+   -0.8747    0.7511    0.0000 C   0  0  0  0  0
+    0.9476   -1.2579    0.0000 C   0  0  0  0  0
+   -0.7382    1.8441    0.0000 H   0  0  0  0  0
+   -1.9249    0.4190    0.0000 H   0  0  0  0  0
+    2.0241   -1.0250   -0.0000 H   0  0  0  0  0
+    0.6110   -2.3067    0.0000 H   0  0  0  0  0
+  1  2  2  0  0  0
+  1  3  1  0  0  0
+  1  4  1  0  0  0
+  2  5  1  0  0  0
+  2  6  1  0  0  0
+M  END
+$$$$
