@@ -1,3 +1,10 @@
+2008-09-17  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
+
+	* libavogadro/src/colors/CMakeLists.txt: remove elementcolor, this is
+	statically linked into libavogadro.
+
+	* sip/*: Update SIP python bindings. 
+	
 2008-09-16  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
 
 	* libavogadro/src/engines/surfaceengine.cpp: Don't try to compute and
